--- a/src/styles.css
+++ b/src/styles.css
@@ -251,7 +251,7 @@ option {
 	font-variant: small-caps;
 }
 
-.statsUnitResourceContainer {
+.statsUnitResourceDiv {
 	padding: .5vmin;
 	position: relative;
 	font-weight: 700;
@@ -261,7 +261,7 @@ option {
 	justify-content: left;
 }
 
-.unitStatsResourceValue {
+.statsUnitResourceValue {
 	padding: .5vmin;
 }
 
@@ -275,13 +275,13 @@ option {
 	padding: 1vmin 1vmin 1vmin 0vmin;
 }
 
-.unitStatsBuildingImg {
+.statsUnitBuildingImg {
 	height: 3.5vmin;
 	width: 3.5vmin;
 	padding: .2vmin 0vmin 1vmin 0vmin;
 }
 
-.unitStatsResourceImg {
+.statsUnitResourceImg {
 	padding: .7vmin 0vmin 0vmin 0vmin;
 	height: 2.5vmin;
 	width: 2.5vmin;
@@ -325,49 +325,81 @@ option {
 	transform: translate(-50%, -50%);
 }
 
-#statsChartContainer {
-	position: relative;
-	right: 0%;
-	left: 30%;
-	top: 10%;
-	bottom: 30%;
-	width: 14%;
-	height: 70%;
+#statsUnitRightContainer {
+	position: absolute;
+	width: 50%;
+	top: 1vmin;
+	right: 1vmin;
+	bottom: 8vmin;
+	border-width: 1px;
+	border: solid;
+	border-color: rgb(255, 255, 255);
+	background-color: rgba(0, 0, 0, 0.185);
+	z-index: 10;
+}
+
+#statsUnitChartContainer {
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	width: 25%;
+	top: 1vmin;
+	bottom: 1vmin;
+	right: 25%;
 	border-width: 1px;
 	border: none;
-	padding: 5px;
-
-	border-color: rgb(0, 0, 0);
-	background-color: rgba(0, 0, 0, 0.185);
+	border-color: rgb(255, 0, 0);
+	background-color: rgba(0, 38, 255, 0.185);
 	z-index: 10;
 }
 
 #statsUnitRankDiv {
 	position: absolute;
-	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-	line-height: 162%;
-	font-weight: 999;
-	font-stretch: extra-expanded;
-	font-size: 12px;
-	text-align: right;
-	top: 2.5%;
-	padding: 0px;
-	bottom: 0%;
-	right: 100%;
-	left: 70%;
-	text-shadow: 2px 2px 2px black;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	width: 100%;
+	height: 100%;
+	left: 100%;
+	border: none;
+	border-width: 1px;
+	background-color: rgba(0, 128, 0, 0.274);
+	z-index: 10;
+}
+
+.statsUnitRankTextDiv {
+	position: absolute;
+	background-color: rgba(0, 0, 0, 0.5);
+	height: 13%;
+	width: 100%;
+	border: solid;
+	border-width: 1px;
+	border-color: rgba(0, 255, 34, 0.479);
+	z-index: 10;
 }
 
 .chartDiv {
 	position: relative;
+	left: 2%;
 	background-color: rgba(0, 0, 0, 0.5);
-	width: 60%;
-	margin: 3px;
-	padding: 3px;
-	border: dashed;
+	height: 13%;
+	width: 98%;
+	border: none;
 	border-color: rgba(255, 255, 255, 0.479);
 	z-index: 10;
 	border-width: 1px;
+}
+
+.barchart {
+	position: absolute;
+}
+
+.statsUnitChartImages {
+	position: relative;
+	top: 10%;
+	height: 80%;
+
 }
 
 .comparisonChartContainer {
@@ -395,13 +427,6 @@ sup {
 	font-size: 6px;
 	position: relative;
 	top: -0.5em;
-}
-
-.barchart {
-	position: absolute;
-	width: 100px;
-	left: 24px;
-	overflow: hidden;
 }
 
 
