--- a/src/styles.css
+++ b/src/styles.css
@@ -343,7 +343,7 @@ option {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
-	width: 25%;
+	width: 23%;
 	top: 1vmin;
 	bottom: 1vmin;
 	right: 25%;
@@ -403,7 +403,7 @@ option {
 .statsUnitChartImages {
 	position: relative;
 	top: 10%;
-	height: 80%;
+	height: 50%;
 
 }
 
@@ -519,14 +519,14 @@ sup {
 	top: 10px;
 	left: 50%;
 	background-image: 'images/burgericon.png';
+	background-position: 0 10;
 	transform: translate(-40%, 0);
 }
 
 #toggleSidebarButtonImg {
 	padding: 0 0 0 0;
-	margin: 0 0 4 0;
-	height: 20px;
-	width: 20px;
+	margin: 4 0 8 0;
+	height: 80%;
 }
 
 #unit_view-h {
