--- a/src/styles.css
+++ b/src/styles.css
@@ -459,10 +459,13 @@ option {
 }
 
 .starchart {
-	border: dashed;
+	border: none;
 	border-width: 1px;
 	border-color: rgba(192, 162, 81, 0.205);
 	width: 100px;
+	background-image: url('images/stats/starchartbg.png');
+	background-position: center;
+	background-size: cover;
 }
 
 sup {
