--- a/src/styles.css
+++ b/src/styles.css
@@ -946,3 +946,16 @@ sup {
 	filter: blur(0.5px);
 	z-index: -1;
 }
+
+.outOfDateBanner {
+	position: relative;
+	font-size: 1vh;
+	margin: 5;
+	height: 1.5vh;
+	color: rgb(255, 255, 255);
+	background-color: rgb(0, 0, 0);
+	text-wrap: nowrap;
+	z-index: 10;
+	font-weight: 600;
+	transform: translate(0, -75%);
+}
