--- a/src/styles.css
+++ b/src/styles.css
@@ -137,8 +137,8 @@ option {
 	scrollbar-color: rgba(255, 255, 255, 0.281) rgba(12, 12, 12, 0.445);
 }
 
-.header_element {
-	font-size: .7vmax;
+.headerElement {
+	font-size: 1.3vmin;
 	padding: 0 .3vw 0 .3vw;
 	font-variant: all-small-caps;
 	font-style: bold;
@@ -682,7 +682,7 @@ sup {
 	border-width: 0px;
 	display: flex;
 	flex-direction: row;
-	align-items: center;
+	align-items: flex-end;
 	justify-content: space-evenly;
 	overflow: hidden;
 }
@@ -700,7 +700,7 @@ sup {
 	flex-direction: column;
 	justify-content: space-evenly;
 	width: 40%;
-	height: 100%;
+	height: 90%;
 	border-color: rgb(2, 1, 90);
 	border-width: 1px;
 	border-style: solid;
@@ -723,7 +723,7 @@ sup {
 	flex-wrap: wrap;
 }
 
-.unit_deck_slot_div {
+.unitDeckSlotDiv {
 	width: 19%;
 	border-color: rgba(2, 0, 36, 0.781);
 	border-width: 2px;
