refactor unitView half complete

--- a/src/styles.css
+++ b/src/styles.css
@@ -106,7 +106,7 @@ option {
 	overflow: auto;
 }
 
-.view_header {
+.viewHeader {
 	background-color: rgba(0, 0, 0, 0.664);
 	box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.304);
 	right: 5px;
@@ -148,7 +148,7 @@ option {
 	color: rgba(207, 207, 207, 0.699);
 }
 
-.unit_table {
+.unitTable {
 	width: 100%;
 	height: 0%;
 }
@@ -161,11 +161,11 @@ option {
 	margin-left: 0%;
 }
 
-.countdown_div {
+.countdownDiv {
 	margin-top: 20%;
 }
 
-.unit_table_header {
+.unitTableHeader {
 	font-size: 1.5vmin;
 	font-weight: 500;
 	color: rgb(214, 214, 214);
@@ -174,11 +174,11 @@ option {
 	height: 1vmin;
 }
 
-.unit_table_smalltext {
+.unitTableSmalltext {
 	font-size: 0.5vmax;
 }
 
-.unit_table_cell {
+.unitTableCell {
 	background-color: #88000011;
 	text-align: center;
 	text-shadow: 2px 2px 1px black;
@@ -194,35 +194,35 @@ option {
 	outline-width: 1px;
 }
 
-.unit_table_cell_alt {
+.unitTableCellAlt {
 	background-color: #c5000017;
 }
 
-.unit_table_header_image {
+.unitTableHeaderImage {
 	height: 1.2vmax;
 }
 
-.unit_table_image {
+.unitTableImage {
 	height: 4vmin;
 	width: auto;
 }
 
-.unit_table_image_medium {
+.unitTableImageMedium {
 	height: 3.5vmin;
 	width: auto;
 }
 
-.unit_table_image_small {
+.unitTableImageSmall {
 	height: 2.5vmin;
 	width: auto;
 }
 
 
-.unit_table_cell_traits {
+.unitTableCellTraits {
 	overflow-x: visible;
 }
 
-.table_add_unit_button {
+.tableAddUnitButton {
 	font-style: bold;
 	font-size: 3vmin;
 	height: 4vmin;
@@ -232,7 +232,7 @@ option {
 	padding: 0;
 }
 
-#stats_content {
+#statsContent {
 	position: absolute;
 	border: none;
 	border-color: rgb(255, 255, 255);
@@ -523,13 +523,13 @@ sup {
 	;
 }
 
-.sidebar_contracted {
+.sidebarContracted {
 	padding: 0;
 	width: 50px;
 	transition: width .1s;
 }
 
-.sidebar_expanded {
+.sidebarExpanded {
 	padding: .5vmin;
 	width: 200px;
 	transition: width .1s;
@@ -548,15 +548,15 @@ sup {
 	opacity: 100%;
 }
 
-#sidebar_title_div {
+#sidebarTitleDiv {
 	padding: 10px;
 }
 
-#sidebar_title_div_v {
+#sidebarTitleDivV {
 	transform: rotate(90deg) translate(30px);
 }
 
-.sidebar_footer_div {
+.sidebarFooterDiv {
 	position: absolute;
 	bottom: 0px;
 	padding: 5px;
@@ -565,7 +565,7 @@ sup {
 	text-shadow: 2px 2px 1px black;
 }
 
-.sidebar_extraSmallFont {
+.sidebarExtraSmallFont {
 	padding: 5 0 5 0;
 	font-family: 'Times New Roman', Times, serif;
 	font-size: 8px;
@@ -595,10 +595,10 @@ sup {
 	transform: translate(-40%, 0);
 }
 
-#toggleSidebarButtonImg {
+.sidebarBtnImg {
 	padding: 0 0 0 0;
 	margin: 4 0 8 0;
-	height: 80%;
+	height: 60%;
 }
 
 #unitView-h {
@@ -675,7 +675,7 @@ sup {
 }
 
 
-#unit_table_head {
+#unitTableHead {
 	position: sticky;
 	background-color: rgba(0, 0, 0, 0.623);
 	background-color: rgba(0, 0, 0, 0.623);
@@ -683,11 +683,11 @@ sup {
 	height: 30px;
 }
 
-#unit_table_body {
+#unitTableBody {
 	top: 30px;
 }
 
-#deck_content {
+#deckContent {
 	background-color: rgba(5, 1, 66, 0.685);
 	border: dotted;
 	border-width: 0px;
@@ -775,15 +775,15 @@ sup {
 	overflow: hidden;
 }
 
-.unit_deck1_slot_div_filled {
+.unitDeck1SlotDivFilled {
 	border-color: rgb(19, 104, 19);
 }
 
-.unit_deck2_slot_div_filled {
+.unitDeck2SlotDivFilled {
 	border-color: rgb(104, 24, 24);
 }
 
-.deck_stats_div {
+.deckStatsDiv {
 	font-weight: 350;
 	font-size: 1.5vmin;
 	line-height: 80%;
@@ -821,7 +821,7 @@ sup {
 	width: 25%;
 }
 
-.deck_stats_img {
+.deckStatsImg {
 	width: 2vmin;
 	padding: .5vmin;
 }
@@ -831,25 +831,25 @@ sup {
 	padding: .5vmin;
 }
 
-.deck_stats_img_ability {
+.deckStatsImgAbility {
 	width: 7%;
 }
 
-.deck_stats_img_traits {
+.deckStatsImgTraits {
 	width: 5.8%;
 }
 
-.deck_stats_img_manf {
+.deckStatsImgManf {
 	position: relative;
 	width: 7%;
 }
 
-.links_div {
+.linksDiv {
 	flex: auto;
 	position: relative;
 }
 
-.links_content {
+.linksContent {
 	position: inherit;
 	color: grey;
 }
@@ -858,7 +858,7 @@ sup {
 	color: rgb(192, 162, 81);
 }
 
-#unit_card_container {
+#unitCardContainer {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
@@ -871,12 +871,12 @@ sup {
 
 }
 
-.unit_card_text {
+.unitCardText {
 	text-shadow: 2px 2px 1px black;
 	font-weight: 700;
 }
 
-.unit_card_name {
+.unitCardName {
 	position: absolute;
 	left: 4%;
 	top: 12%;
@@ -891,7 +891,7 @@ sup {
 	text-align: center;
 }
 
-.unit_card {
+.unitCard {
 	overflow: hidden;
 	position: relative;
 	background-color: rgba(0, 0, 0, 0.493);
@@ -902,7 +902,7 @@ sup {
 	z-index: 0;
 }
 
-.unit_card_image {
+.unitCardImage {
 	position: absolute;
 	opacity: 88%;
 	width: 70%;
@@ -910,7 +910,7 @@ sup {
 	top: 30%;
 }
 
-.unit_card_building {
+.unitCardBuilding {
 	opacity: 90%;
 	position: absolute;
 	width: 30%;
@@ -918,7 +918,7 @@ sup {
 	bottom: 2%;
 }
 
-.unit_card_matter {
+.unitCardMatter {
 	position: absolute;
 	top: 0;
 	color: rgb(255, 58, 58);
@@ -928,7 +928,7 @@ sup {
 	text-align: center;
 }
 
-.unit_card_bandwidth {
+.unitCardBandwidth {
 	position: absolute;
 	left: 32%;
 	top: 0;
@@ -939,7 +939,7 @@ sup {
 	text-align: center;
 }
 
-.unit_card_energy {
+.unitCardEnergy {
 	position: absolute;
 	right: 0;
 	top: 0;
@@ -950,7 +950,7 @@ sup {
 	text-align: center;
 }
 
-.unit_card_type {
+.unitCardType {
 	position: absolute;
 	left: 10%;
 	top: 20%;
@@ -964,19 +964,19 @@ sup {
 	transform: rotate(90deg);
 }
 
-.unit_card_trait {
+.unitCardTrait {
 	width: 90%;
 	padding: 0 0 30% 0;
 }
 
-.unit_card_traits {
+.unitCardTraits {
 	position: absolute;
 	top: 26%;
 	left: 80%;
 	right: 4%;
 }
 
-.unit_card_manufacturer {
+.unitCardManufacturer {
 	position: relative;
 	top: 83%;
 	bottom: 0%;
@@ -1005,7 +1005,7 @@ sup {
 	text-decoration: underline;
 }
 
-.socials_img {
+.socialsImg {
 	width: 1.5vmin;
 	padding: 0 0 0 10;
 }
