--- a/src/styles.css
+++ b/src/styles.css
@@ -1021,3 +1021,61 @@ sup {
 	width: 1.5vmin;
 	padding: 0 0 0 10;
 }
+
+.stratViewTimeInput {
+	width: 100%;
+}
+
+.stratTimeContainer {
+	display: flex;
+	flex-direction: row;
+
+	width: 90%;
+	height: fit-content;
+	border: none;
+	border-width: 1px;
+}
+
+.stratButtonsContainer {
+	display: flex;
+	width: 90%;
+	flex-direction: row;
+	border: none;
+	border-width: 1px;
+}
+
+.stratResourceContainer {
+	display: flex;
+	width: 10%;
+	height: 100%;
+	justify-content: space-evenly;
+	flex-direction: row;
+	border: none;
+	border-width: 1px;
+}
+
+.stratResourceDiv {
+	display: flex;
+	flex-direction: row;
+	padding: 3% 0 0 0;
+	border: none;
+	border-width: 1px;
+}
+
+.stratResourceImg {
+	height: 2vmin;
+}
+
+#stratContent {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+}
+
+.stratChartContainer {
+	height: 80%;
+	width: 90%;
+	border: solid;
+	border-width: 1px;
+}
